# rovOS

./: .gitignore  Readme.md  compose.yaml  raspberry_installer.sh
.devcontainer/: devcontainer.json
docker/ROS2/: Dockerfile  entrypoint.sh
src/ros2_wp/: requirements.txt
src/ros2_wp/docs/: README.md  setup_dev.md
src/ros2_wp/lifecycle_manager/: setup.py
src/ros2_wp/lifecycle_manager/launch/: lifecycle_launch.py
src/ros2_wp/lifecycle_manager/lifecycle_manager/: LifecycleManagerNode.py
src/ros2_wp/sensig_capture/: package.xml  setup.cfg  setup.py
src/ros2_wp/sensig_capture/config/: camera_config.yaml
src/ros2_wp/sensig_capture/launch/: cameras_launch.py
src/ros2_wp/sensig_capture/sensig_capture/: Camera1Node.py  CameraNode.py  StereoSyncNode.py
src/ros2_wp/sensig_capture/sensig_capture/_/: CameraSupervisorNode copy 2.py  CameraSupervisorNode copy.py
src/ros2_wp/src/: README.md
src/ros2_wp/src/cv_algorithms/cv_algorithms/: lc_node_mono_ir.py  lc_node_stereo_ir.py  lc_node_stereo_vo.py
src/ros2_wp/src/dual_camera_msgs/: CMakeLists.txt  package.xml
src/ros2_wp/src/dual_camera_msgs/msg/: ImagePair.msg
src/ros2_wp/src/lifecycle_manager/launch/: lifecycle_manager.launch.py
src/ros2_wp/src/lifecycle_manager/lifecycle_manager/: LifecycleCameraManager.py
src/ros2_wp/src/my_camera-main/: package.xml  setup.cfg  setup.py
src/ros2_wp/src/my_camera-main/my_camera/: ip_stream_node.py  (+1 more)
src/ros2_wp/src/normalizator/: CMakeLists.txt  package.xml
src/ros2_wp/src/sensig_capture/: CMakeLists.txt
src/ros2_wp/src/system_bringup/: package.xml  setup.py
(+8 files in other folders)
